[package]
name = "software-serial"
version = "0.1.0"
authors = ["Gustav Sörnäs <gustav@sornas.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "software-serial"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
bitbang-hal = { git = "https://github.com/Javier-varez/bitbang-hal", branch = "fix_serial_write" }
void = { version = "1.0.2", default-features = false }

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "4170a773d4d76cc93433d2455ed8b14e573ebe70"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
